--- a/kubernetes-deploy/install-k8s.yml
+++ b/kubernetes-deploy/install-k8s.yml
@@ -42,7 +42,7 @@
        command: sudo sysctl --system
 
 #######################################################
-#  Below commneted lines are already done in the OS image 
+#  Enable Proxy if you need  
 #     - name: Proxy Setting for Apt
 #       file:
 #         path: "/etc/apt/apt.conf.d/proxy.conf"
@@ -55,39 +55,40 @@
 #                 Acquire::http::Proxy "http://inban1b-proxy.apac.nsn-net.net:8080/";
 #                 Acquire::https::Proxy "http://inban1b-proxy.apac.nsn-net.net:8080/";
 
-#     - name: install containerd
-#       shell: |
-#               sudo apt-get update && sudo apt-get install -y containerd
-#               sudo mkdir -p /etc/containerd
-#               sudo containerd config default | sudo tee /etc/containerd/config.toml
-#               sudo systemctl restart containerd
+     - name: install containerd
+       shell: |
+               sudo apt-get update && sudo apt-get install -y containerd
+               sudo mkdir -p /etc/containerd
+               sudo containerd config default | sudo tee /etc/containerd/config.toml
+               sudo systemctl restart containerd
 
-#     - name: disable swap
-#       shell: |
-#               sudo swapoff -a
-#               sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+     - name: disable swap
+       shell: |
+               sudo swapoff -a
+               sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
 
-#     - name: install and configure dependencies
-#       shell: |
-#               sudo apt-get update && sudo apt-get install -y apt-transport-https curl
-#               curl -x http://inban1b-proxy.apac.nsn-net.net:8080/ -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+     - name: install and configure dependencies
+       shell: |
+               sudo apt-get update && sudo apt-get install -y apt-transport-https curl
+               curl -x http://inban1b-proxy.apac.nsn-net.net:8080/ -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
 
-#     - name: Create kubernetes repo file
-#       file:
-#         path: "/etc/apt/sources.list.d/kubernetes.list"
-#         state: "touch"
+     - name: Create kubernetes repo file
+       file:
+         path: "/etc/apt/sources.list.d/kubernetes.list"
+         state: "touch"
 
-#     - name: Add K8s Source
-#       blockinfile:
-#         path: "/etc/apt/sources.list.d/kubernetes.list"
-#         block: |
-#               deb https://apt.kubernetes.io/ kubernetes-xenial main
+     - name: Add K8s Source
+       blockinfile:
+         path: "/etc/apt/sources.list.d/kubernetes.list"
+         block: |
+               deb https://apt.kubernetes.io/ kubernetes-xenial main
 
-#     - name: install kubernetes
-#       shell: |
-#               sudo apt-get update
-#               sudo apt-get install -y kubelet=1.20.1-00 kubeadm=1.20.1-00 kubectl=1.20.1-00
-#               sudo apt-mark hold kubelet kubeadm kubectl
+     - name: install kubernetes
+       shell: |
+               sudo apt-get update
+               sudo apt-get install -y kubelet=1.20.1-00 kubeadm=1.20.1-00 kubectl=1.20.1-00
+               sudo apt-mark hold kubelet kubeadm kubectl
+
 #######################################################
 #     - name: enable proxy for master
 #       file:
