--- a/kubernetes-deploy/install-k8s.yml
+++ b/kubernetes-deploy/install-k8s.yml
@@ -22,8 +22,8 @@
 
      - name: modprobe
        shell: |
-               sudo modprobe overlay
-               sudo modprobe br_netfilter
+               modprobe overlay
+               modprobe br_netfilter
 
      - name: Set system configurations for Kubernetes networking
        file:
@@ -39,7 +39,8 @@
                 net.bridge.bridge-nf-call-ip6tables = 1
 
      - name: Apply new settings
-       command: sudo sysctl --system
+       shell: |
+              sysctl --system
 
 #######################################################
 #  Enable Proxy if you need  
@@ -57,20 +58,20 @@
 
      - name: install containerd
        shell: |
-               sudo apt-get update && sudo apt-get install -y containerd
-               sudo mkdir -p /etc/containerd
-               sudo containerd config default | sudo tee /etc/containerd/config.toml
-               sudo systemctl restart containerd
+               apt-get update && apt-get install -y containerd
+               mkdir -p /etc/containerd
+               containerd config default | tee /etc/containerd/config.toml
+               systemctl restart containerd
 
      - name: disable swap
        shell: |
-               sudo swapoff -a
-               sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+               swapoff -a
+               sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
 
      - name: install and configure dependencies
        shell: |
-               sudo apt-get update && sudo apt-get install -y apt-transport-https curl
-               curl -x http://inban1b-proxy.apac.nsn-net.net:8080/ -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+               apt-get update && apt-get install -y apt-transport-https curl
+               curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
 
      - name: Create kubernetes repo file
        file:
@@ -85,9 +86,9 @@
 
      - name: install kubernetes
        shell: |
-               sudo apt-get update
-               sudo apt-get install -y kubelet=1.20.1-00 kubeadm=1.20.1-00 kubectl=1.20.1-00
-               sudo apt-mark hold kubelet kubeadm kubectl
+               apt-get update
+               apt-get install -y kubelet=1.20.1-00 kubeadm=1.20.1-00 kubectl=1.20.1-00
+               apt-mark hold kubelet kubeadm kubectl
 
 #######################################################
 #     - name: enable proxy for master
@@ -120,6 +121,6 @@
 #
 #     - name: reload containerd process
 #       shell: |
-#               sudo systemctl daemon-reload
-#               sudo systemctl restart containerd
+#               systemctl daemon-reload
+#               systemctl restart containerd
 
