--- a/kubernetes-deploy/master.yml
+++ b/kubernetes-deploy/master.yml
@@ -1,12 +1,8 @@
 - hosts: masters
   become: yes
   tasks:
-    - name: Set Pod Network CIDR
-      set_fact: 
-        pod_network: 10.244.0.0/16
-
     - name: Reset the cluster - If already created
-      shell: kubeadm init -f
+      shell: kubeadm reset -f
       ignore_errors: yes
 
     - name: initialize the cluster
@@ -30,28 +26,7 @@
         remote_src: yes
         owner: kube
 
-    - name: Download Calico YAML
-      become: yes
-      become_user: kube
-      shell: curl -o /tmp/calico.yaml https://docs.projectcalico.org/manifests/calico.yaml
-      args:
-        chdir: $HOME
 
-    - name: Set Pod Network in Calico
-      become: yes
-      become_user: kube
-      shell: |
-             sed -i 's| *# - name: CALICO_IPV4POOL_CIDR|            - name: CALICO_IPV4POOL_CIDR|g' /tmp/calico.yaml
-             sed -i 's| *#   value: "192.168.0.0/16"|              value: \"{{ pod_network }}\"|g' /tmp/calico.yaml
-
-
-    - name: install Pod network
-      become: yes
-      become_user: kube
-      shell: kubectl apply -f /tmp/calico.yaml 
-      args:
-        chdir: $HOME
-        
     - name: Get the token for joining the worker nodes
       become: yes
       become_user: kube
